6/6/25:

- Add high and low temperatures
- Create basic weather type modules to handle changing page display
- Style temperature toggle button
- Fix temperature toggle always working off of original search location values
- Create F -> C / C -> F conversion and toggle button
- Adjust date formatting
- Move temperature and feels like to top of weather data display
- Remove temperature and feels like from forEach loop in displayData
- Adjust weather data formatting for better legibility 

6/5/25:

- Add weather display to page when location is searched
- Adjust data returned by weather search
- Center search form and buttons vertically and horizontally
- Add button to bring back up search input after location has been searched
- Change search to display by default
- Reduce search form to one universal input
- Fix search button disappearing after searching a location
- Add form search functionality
- Create search-weather module to hold search form
- Create basic form for searching weather, currently nonfunctional
- Create function to process JSON data and return only required information

6/4/25:

- Create function to get weather data from API and console log it
- Initial deployment
- Basic webpack setup
- Create html document and link css and js files
- Create pseudocode