@@ -1,4 +1,0 @@
-[ZoneTransfer]
-ZoneId=3
-ReferrerUrl=https://unsplash.com/
-HostUrl=https://images.unsplash.com/photo-1501630834273-4b5604d2ee31?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=billy-huynh-v9bnfMCyKbg-unsplash.jpg
