@@ -1,4 +1,0 @@
-[ZoneTransfer]
-ZoneId=3
-ReferrerUrl=https://unsplash.com/
-HostUrl=https://images.unsplash.com/photo-1527766833261-b09c3163a791?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=alex-dukhanov-ZxZQk7777R4-unsplash.jpg
