@@ -1,4 +1,0 @@
-[ZoneTransfer]
-ZoneId=3
-ReferrerUrl=https://unsplash.com/
-HostUrl=https://images.unsplash.com/photo-1491002052546-bf38f186af56?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=adam-chang-IWenq-4JHqo-unsplash.jpg
