@@ -1,4 +1,0 @@
-[ZoneTransfer]
-ZoneId=3
-ReferrerUrl=https://unsplash.com/
-HostUrl=https://images.unsplash.com/photo-1533324268742-60b233802eef?ixlib=rb-4.1.0&q=85&fm=jpg&crop=entropy&cs=srgb&dl=courtney-cook-HClKQKUodF4-unsplash.jpg
