@@ -1,5 +1,6 @@
 6/6/25:
 
+- Update temperature toggle to take high and low temperatures
 - Add high and low temperatures
 - Create basic weather type modules to handle changing page display
 - Style temperature toggle button
